# bluelabel_aios_3_1

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_ROSTER.md  AIOSV3_STRATEGIC_ROADMAP.md  ARCHITECTURE.md  ARCHITECTURE_GAP_ANALYSIS.md  BACKLOG.md  CLAUDE.md  CLAUDE_CODE_AS_AGENTS_ANALYSIS.md  COMMERCIAL_VISION.md  CRITICAL_ARCHITECTURE_GAPS.md  CURRENT_STATUS.md  DEMO_GUIDE.md  DEVELOPMENT.md  DEVELOPMENT_PROCESS.md  DOCUMENTATION_STRUCTURE.md  Dockerfile.dev  HANDOFF_SESSION_DEC_2024.md  HANDOFF_TO_NEW_CLAUDE_INSTANCE.md  INSTRUCTIONS.md  LESSONS_LEARNED.md  OPENAI_AGENT_GUIDE_INSIGHTS.md  PHASE_2_COMPLETE.md  PLATFORM_QUESTIONS_AND_ISSUES.md  PROJECT_CONTEXT.md  PROJECT_PHASES.md  PROJECT_PLAN.md  QUICK_START.md  README.md  REAL_COLLABORATION_SETUP.md  ROLE_DEFINITIONS.md  SPRINT_1_1_BACKLOG.md  SPRINT_1_2_5_COMPLETE.md  SPRINT_1_2_BACKLOG.md  SPRINT_1_3_RETROSPECTIVE.md  SPRINT_1_4_PLAN.md  SPRINT_1_5_STATUS.md  SPRINT_COMPLETION_SUMMARIES.md  STRATEGIC_ANALYSIS_MULTI_AGENT_VS_CLAUDE_CODE.md  (+58 more)
agents/: collaborative_agent.py
agents/base/: agent.py  communication.py  enhanced_agent.py  exceptions.py  health.py  lifecycle.py  recovery.py  types.py
agents/onboarding/: CTO_AGENT_ONBOARD.md  DEVOPS_AGENT_ONBOARD.md  QA_AGENT_ONBOARD.md
agents/specialists/: cto_agent.py
api/: main.py
archive/demo_iterations/: demo_auto_enhanced.py  demo_enhanced_interactive.py  demo_fixed_enhanced.py  demo_polished.py  demo_simple_enhanced.py  demo_ultimate.py
archive/demos/: CONTROL_CENTER_UI.md  DEMO_MULTI_TERMINAL.md  DEMO_TASK_ORCHESTRATION.md  MULTI_TERMINAL_SETUP.md  debug_connection.py  demo_control_center_ui.py  demo_emily_simple.py  minimal_test.py  shared_collab.py  simple_server.py  single_agent_pr_test.py  workflow_collaboration_demo.py  working_demo.py  working_shared_collab.py
archive/launchers/: launch_agent.py  launch_agent_with_tasks.py  launch_control_center_sprint.py  launch_orchestrator.py  launch_sprint_1_6.py  launch_theatrical_show.py  real_sprint_1_6_orchestrator.py  sprint_1_6_orchestrator.py  (+2 more)
config/: agents.yaml  llm_config.py  llm_routing.yaml  local_llm_models.yaml  local_provider.yaml  models.yaml  routing.yaml
demos/: agent_visualization_demo.py  alex_qa_collaborative_demo.py  alex_qa_demo_output.md  hermes_handoff_demo.py  jordan_devops_deployment_demo.py  marcus_crud_demo.py  real_agent_task_demo.py  simple_real_task_demo.py  theatrical_comparison_demo.py  theatrical_dashboard_demo.py  theatrical_minimal_demo.py  theatrical_simple_demo.py  theatrical_textual_demo.py  visualized_agent_task.py
designs/: enhanced_monitoring_terminal.md  monitoring_dashboard.md
docs/: AGENT_DEVELOPMENT.md  API_REFERENCE.md  COMPLETE_SYSTEM_ARCHITECTURE.md  CONTROL_CENTER.md  DEPLOYMENT.md  GETTING_STARTED.md  GREEK_GOD_MIGRATION.md  IMPLEMENTATION_CHECKLIST.md  LOCAL_LLM_SETUP.md  PHASE_3_ROADMAP.md  PROCESS_IMPROVEMENTS.md  PRODUCTION_READY_ROADMAP.md  TECHNICAL_OPERATOR_FLOW.md  THEATRICAL_DASHBOARD_COMPARISON.md  THEATRICAL_DASHBOARD_GUIDE.md  TO_REAL_PROJECT_EXAMPLE.md
examples/: auto_registering_agent.py
hermes_sessions/: bakery_session_823c3dfc.json  bakery_session_823c3dfc.md
orchestration/: assignment_engine.py  progress_monitor.py  sprint_planner.py  task_orchestrator.py
projects/: README.md
research/: aiosv3_blueprint.md
scripts/: demo_orchestrator.py  demo_orchestrator_simple.py  dev-setup.sh  install_python.sh  migrate_theatrical_dashboard.py  start.sh  start_monitoring_clean.sh  task_management_demo.py
sprint_1_6_tasks/: frontend_agent_tasks.md
sprints/: SPRINT_TIMELINE.md
templates/: TASK_ASSIGNMENT_TEMPLATE.md
tests/: conftest.py
(+245 files in other folders)
